// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component matches snapshot (disabled) 1`] = `
<label
  className="flush--bottom display--inlineBlock"
>
  <CustomCheckboxContainer
    checked={false}
    onChange={[Function]}
  >
    <CustomCheckboxInput
      disabled={true}
      name="snapshot_checkbox"
    />
    <span
      aria-hidden={true}
      style={
        Object {
          "pointerEvents": "none",
        }
      }
    >
      <CheckEmptyIcon
        size="xs"
      />
    </span>
  </CustomCheckboxContainer>
  <span
    className="padding--left--half"
  >
    Snapshot Label
  </span>
</label>
`;

exports[`Checkbox component matches snapshot (with label) 1`] = `
<label
  className="flush--bottom display--inlineBlock"
>
  <CustomCheckboxContainer
    checked={false}
    onChange={[Function]}
  >
    <CustomCheckboxInput
      name="snapshot_checkbox"
    />
    <span
      aria-hidden={true}
      style={
        Object {
          "pointerEvents": "none",
        }
      }
    >
      <CheckEmptyIcon
        size="xs"
      />
    </span>
  </CustomCheckboxContainer>
  <span
    className="padding--left--half"
  >
    Snapshot Label
  </span>
</label>
`;

exports[`Checkbox component matches snapshot (without label) 1`] = `
<label
  className="flush--bottom display--inlineBlock"
>
  <CustomCheckboxContainer
    checked={false}
    onChange={[Function]}
  >
    <CustomCheckboxInput
      name="snapshot_checkbox"
      showLabel={false}
    />
    <span
      aria-hidden={true}
      style={
        Object {
          "pointerEvents": "none",
        }
      }
    >
      <CheckEmptyIcon
        size="xs"
      />
    </span>
  </CustomCheckboxContainer>
  <span
    className="padding--left--half"
  >
    snapshot checkbox
  </span>
</label>
`;
